# MailShift

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  analyzer.py  benchmark.py  benchmark_lower.py  blacklist.json  cli_utils.py  config.py  database.py  engine.py  fast_analyzer.py  hardware.py  history.py  logger.py  macOS.md  mails_cache.json  main.py  models.py  ollama-vs-lmstudio.md  pro_analyzer.py  publish.py  pyproject.toml  requirements.txt  super_fix.py  ui.py  whitelist.json
src/mailshift/: main.py
src/mailshift/config/: config.py
src/mailshift/core/: engine.py  session.py
src/mailshift/db/: database.py
src/mailshift/models/: models.py
tests/: benchmark_matrix_helpers.py  benchmark_regex.py  conftest.py  evaluate_ai.py  evaluate_fast.py  evaluate_lm_studio_workers.py  evaluate_pro_mode.py  evaluate_worker_matrix.py  standalone_benchmark.py  test_ai_dataset.json  test_analyzer_base.py  test_benchmark_matrix_helpers.py  test_cli_installers_cross_platform.py  test_cli_intel_gpu.py  test_cli_ollama.py  test_cli_security.py  test_config.py  test_database.py  test_decode_header.py  test_engine.py  test_engine_filters.py  test_engine_reconnect.py  test_fast_analyzer.py  test_fast_analyzer_dataset.py  test_google_delete_trash.py  test_hardware.py  test_history.py  test_keyword_and_normalize.py  test_logger.py  test_main.py  test_main_features.py  test_models.py  test_parse_cli_date.py  test_parsing_integrated.py  test_parsing_isolated.py  test_paths.py  test_power_user_settings.py  test_pro_analyzer.py  test_session.py  test_unsubscribe.py  (+4 more)
(+13 files in other folders)
